--- a/elements/CSS/style.css
+++ b/elements/CSS/style.css
@@ -463,63 +463,7 @@ font-family: 'Rubik', sans-serif;
 .btn {
     transform:translateX(900px);
 }
-
-
-.modalDialog {
-	position: fixed;
-	font-family: Arial, Helvetica, sans-serif;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background: rgba(0,0,0,0.8);
-	z-index: 99999;
-	opacity:0;
-	-webkit-transition: opacity 400ms ease-in;
-	-moz-transition: opacity 400ms ease-in;
-	transition: opacity 400ms ease-in;
-	pointer-events: none;
-}
-
-
-.modalDialog:target {
-	opacity:1;
-	pointer-events: auto;
-}
-
-.modalDialog > div {
-	width: 400px;
-	position: relative;
-	margin: 10% auto;
-	padding: 5px 20px 13px 20px;
-	border-radius: 10px;
-	background: #fff;
-	background: -moz-linear-gradient(#fff, #999);
-	background: -webkit-linear-gradient(#fff, #999);
-	background: -o-linear-gradient(#fff, #999);
-}
-
-
-.close {
-	background: #606061;
-	color: #FFFFFF;
-	line-height: 25px;
-	position: absolute;
-	right: -12px;
-	text-align: center;
-	top: -10px;
-	width: 24px;
-	text-decoration: none;
-	font-weight: bold;
-	-webkit-border-radius: 12px;
-	-moz-border-radius: 12px;
-	border-radius: 12px;
-	-moz-box-shadow: 1px 1px 3px #000;
-	-webkit-box-shadow: 1px 1px 3px #000;
-	box-shadow: 1px 1px 3px #000;
-}
-
-.close:hover { background: #00d9ff; }
+@media (max-width:$screen-xs-max){}@media (min-width:$screen-sm){}@media (min-width:$screen-sm){}.modal .btn-close{color:#aaa;cursor:pointer;font-size:3rem;position:absolute;top:0;right:5px;text-decoration:none;}.modal .btn-close:hover,.modal .btn-close:focus{color:#999}.modal-wrap:before{content:'';display:none;background:rgba(0,0,0,0.6);position:fixed;top:0;right:0;bottom:0;left:0;z-index:101}.modal-overlay{display:none;position:fixed;top:0;right:0;bottom:0;left:0;z-index:102}.modal-open:checked ~ .modal-wrap:before,.modal-open:checked ~ .modal-wrap .modal-overlay{display:block}.modal-open:checked ~ .modal-wrap .modal-dialog{transform:translate(-50%,-50%);position:fixed;top:40%}.modal-dialog{background:#fefefe;border:#555 solid 1px;border-radius:5px;position:fixed;left:50%;top:-100%;transform:translate(-50%,-150%);transition:transform .6s ease-in-out;width:80%;max-width:600px;z-index:103}.modal-body{padding:20px;}.modal-body p{margin:0}.modal-header,.modal-footer{padding:20px 20px}.modal-header{border-bottom:#eaeaea solid 1px;}.modal-header h2{font-size:2rem;margin:0}.modal-footer{border-top:#eaeaea solid 1px;text-align:right}
 
 
 
