--- a/elements/CSS/bubble.css
+++ b/elements/CSS/bubble.css
@@ -6,6 +6,9 @@
     overflow: hidden;
     height: 100vh;
     width: 100%;
+    background-image:url(../img/agario_bg.png);
+    background-repeat: repeat;
+    background-size:30%;
 }
 
 .circle {
