--- a/elements/CSS/bubble.css
+++ b/elements/CSS/bubble.css
@@ -2,21 +2,26 @@
     display: flex;
 }
 
-.cercle {
-    overflow: hidden;
-    height: 100vh;
-    width: 100%;
-    background-image:url(../img/agario_bg.png);
-    background-repeat: repeat;
-    background-size:30%;
-}
-
-.circle {
+.rond {
+    position:absolute;
     border-radius: 50%;
     text-align: center;
     font-family: 'Rubik', sans-serif;
     font-weight:900;
     color:#FFF;
+    left:0;
+    top:0;
+}
+.cercle{
+    background-image:url(../img/agario_bg.png);
+    background-size:30%;
+    background-repeat:repeat;
+}
+.limite {
+    height:600px;
+    width:1100px;
+    display:block;
+    position:relative;
 }
 
 .JS {
@@ -24,18 +29,21 @@
     height: 120px;
     line-height: 120px;
     background-color:#1BBC9B;
+    z-index: 1;
 }
 .PHP {
     width: 180px;
     height: 180px;
     line-height: 180px;
     background-color: #2274A5;
+    z-index: 2;
 }
 .Ruby {
     width: 70px;
     height: 70px;
     line-height: 70px;
     background-color: #87E53E;
+    z-index: 3;
 }
 .HTML {
     width: 100px;
@@ -48,6 +56,7 @@
     height: 100px;
     line-height: 100px;
     background-color: #FF7D45;
+
 }
 .CSS {
     width: 100px;
@@ -111,7 +120,7 @@
 }
 
 
-
+/*
 
 .bubble {
    animation-name: bubble;
@@ -321,3 +330,4 @@ from {
       transform: translateY(-1150px) translateX(0px);
    }
 }
+/*
